<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/nav_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/book"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/imageButtonLo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/location" />

        <ImageButton
            android:id="@+id/imageButtonSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/settings" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/toggleBar"
        android:layout_width="403dp"
        android:layout_height="38dp"
        android:background="@color/toolbar_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/toggleButtonEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:text="OFF"
            android:textOff="OFF" />


        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginRight="32dp"
            android:layout_weight="1"
            android:text="@string/save_button"
            android:textOff="@string/save_button"
            android:textOn="@string/save_button" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/navBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleBar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textContact"
                android:layout_width="125dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/contact"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textAddress"
                android:layout_width="125dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editName" />
            <requestFocus />

            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="Enter Name"
                android:inputType="text|textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textContact" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="360dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_street_address"
                android:inputType="text|textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textAddress" />

            <EditText
                android:id="@+id/editCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="9"
                android:hint="City"
                android:imeOptions="actionNext"
                android:inputType="text|textCapWords"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editAddress" />

            <EditText
                android:id="@+id/editState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:ems="2"
                android:hint="@string/state"
                android:imeOptions="actionNext"
                android:inputType="text|textCapCharacters"
                app:layout_constraintStart_toEndOf="@+id/editCity"
                app:layout_constraintTop_toBottomOf="@id/editAddress" />

            <EditText
                android:id="@+id/editZipCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:ems="5"
                android:hint="@string/zipcode"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="5"
                app:layout_constraintStart_toEndOf="@+id/editState"
                app:layout_constraintTop_toBottomOf="@id/editAddress" />

            <EditText
                android:id="@+id/editHomePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:autofillHints=""
                android:ems="8"
                android:hint="@string/home_phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textHome" />

            <TextView
                android:id="@+id/textHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Home Phone:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editCity" />

            <TextView
                android:id="@+id/textCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="120dp"
                android:layout_marginBottom="12dp"
                android:text="Cell Phone:"

                app:layout_constraintStart_toEndOf="@+id/editHomePhone"
                app:layout_constraintTop_toBottomOf="@+id/editState" />

            <EditText
                android:id="@+id/editCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:ems="8"
                android:hint="@string/cell_phone"
                android:inputType="phone"
                android:nextFocusDown="@id/editEmailAddress"
                app:layout_constraintStart_toStartOf="@+id/textCell"
                app:layout_constraintTop_toBottomOf="@+id/textCell" />

            <TextView
                android:id="@+id/textEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Email Address:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editHomePhone" />

            <EditText
                android:id="@+id/editEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="16"
                android:hint="Email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textEmailAddress" />

            <TextView
                android:id="@+id/textBday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="Birthday:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editEmailAddress" />

            <TextView
                android:id="@+id/textBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="01/01/1970"
                app:layout_constraintStart_toEndOf="@+id/textBday"
                app:layout_constraintTop_toBottomOf="@+id/editEmailAddress" />

            <Button
                android:id="@+id/buttonBirthDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:background="@color/toolbar_background"
                android:backgroundTint="@color/changeButton"
                android:text="@string/change"
                app:layout_constraintBaseline_toBaselineOf="@+id/textBirthday"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
